# jax-ml

./: .cirrus.star  .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COPYING  MANIFEST.in  Makefile  README.rst  SECURITY.md  azure-pipelines.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.binder/: postBuild  requirements.txt
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: artifact-redirector.yml  check-changelog.yml  check-manifest.yml  labeler-module.yml  publish_pypi.yml  update_tracking_issue.yml  wheels.yml
asv_benchmarks/: .gitignore  asv.conf.json
asv_benchmarks/benchmarks/: __init__.py  cluster.py  common.py  datasets.py  linear_model.py  metrics.py  model_selection.py  neighbors.py  utils.py
benchmarks/: bench_20newsgroups.py  bench_covertype.py  bench_feature_expansions.py  bench_glm.py  bench_glmnet.py  bench_hist_gradient_boosting.py  bench_hist_gradient_boosting_adult.py  bench_hist_gradient_boosting_categorical_only.py  bench_hist_gradient_boosting_higgsboson.py  bench_hist_gradient_boosting_threading.py  bench_isolation_forest.py  bench_isotonic.py  bench_kernel_pca_solvers_time_vs_n_components.py  bench_kernel_pca_solvers_time_vs_n_samples.py  bench_lasso.py  bench_lof.py  bench_mnist.py  bench_multilabel_metrics.py  bench_online_ocsvm.py  bench_plot_fastkmeans.py  bench_plot_hierarchical.py  bench_plot_incremental_pca.py  bench_plot_lasso_path.py  bench_plot_neighbors.py  bench_plot_nmf.py  bench_plot_omp_lars.py  bench_plot_parallel_pairwise.py  bench_plot_polynomial_kernel_approximation.py  bench_plot_randomized_svd.py  bench_plot_svd.py  bench_plot_ward.py  bench_random_projections.py  bench_rcv1_logreg_convergence.py  bench_saga.py  bench_sample_without_replacement.py  bench_sgd_regression.py  bench_sparsify.py  bench_text_vectorizers.py  bench_tree.py  bench_tsne_mnist.py  (+1 more)
doc/: Makefile  README.md  about.rst  common_pitfalls.rst  computing.rst  conf.py  conftest.py  data_transforms.rst  datasets.rst  faq.rst  getting_started.rst  glossary.rst  governance.rst  inspection.rst  install.rst  make.bat  metadata_routing.rst  model_persistence.rst  preface.rst  presentations.rst  related_projects.rst  roadmap.rst  support.rst  visualizations.rst  whats_new.rst
doc/computing/: computational_performance.rst  parallelism.rst  scaling_strategies.rst
doc/datasets/: loading_other_datasets.rst  real_world.rst  sample_generators.rst  toy_dataset.rst
doc/developers/: advanced_installation.rst  bug_triaging.rst  contributing.rst  cython.rst  develop.rst  maintainer.rst  minimal_reproducer.rst  performance.rst  plotting.rst  tips.rst  utilities.rst
doc/logos/: README.md
doc/modules/: array_api.rst  biclustering.rst  calibration.rst  classes.rst  clustering.rst  compose.rst  covariance.rst  cross_decomposition.rst  cross_validation.rst  decomposition.rst  density.rst  ensemble.rst  feature_extraction.rst  feature_selection.rst  gaussian_process.rst  grid_search.rst  impute.rst  isotonic.rst  kernel_approximation.rst  kernel_ridge.rst  lda_qda.rst  learning_curve.rst  linear_model.rst  manifold.rst  metrics.rst  mixture.rst  model_evaluation.rst  multiclass.rst  naive_bayes.rst  neighbors.rst  neural_networks_supervised.rst  neural_networks_unsupervised.rst  outlier_detection.rst  partial_dependence.rst  permutation_importance.rst  preprocessing.rst  preprocessing_targets.rst  random_projection.rst  semi_supervised.rst  sgd.rst  (+3 more)
doc/templates/: index.html  redirects.html
doc/testimonials/: testimonials.rst
doc/tutorial/: index.rst
doc/whats_new/: older_versions.rst  v1.4.rst
examples/applications/: plot_digits_denoising.py  (+11 more)
xlearn/: __init__.py  _config.py  _distributor_init.py  _isotonic.py  _min_dependencies.py  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  exceptions.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py
(+871 files in other folders)
