[options]
packages = find:

[options.packages.find]
include = xlearn*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = xlearn
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    # Activate the plugin explicitly to ensure that the seed is reported
    # correctly on the CI when running `pytest --pyargs xlearn` from the
    # source folder.
    -p xlearn.tests.random_seed
    -rN

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[mypy]
ignore_missing_imports = True
allow_redefinition = True
exclude=
    xlearn/externals

[check-manifest]
# ignore files missing in VCS
ignore =
    xlearn/_loss/_loss.pyx
    xlearn/linear_model/_sag_fast.pyx
    xlearn/linear_model/_sgd_fast.pyx
    xlearn/utils/_seq_dataset.pyx
    xlearn/utils/_seq_dataset.pxd
    xlearn/utils/_weight_vector.pyx
    xlearn/utils/_weight_vector.pxd
    xlearn/metrics/_dist_metrics.pyx
    xlearn/metrics/_dist_metrics.pxd
    xlearn/metrics/_pairwise_distances_reduction/_argkmin.pxd
    xlearn/metrics/_pairwise_distances_reduction/_argkmin.pyx
    xlearn/metrics/_pairwise_distances_reduction/_argkmin_classmode.pyx
    xlearn/metrics/_pairwise_distances_reduction/_base.pxd
    xlearn/metrics/_pairwise_distances_reduction/_base.pyx
    xlearn/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
    xlearn/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
    xlearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
    xlearn/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
    xlearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
    xlearn/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx


[codespell]
skip = ./.git,./.mypy_cache,./doc/themes/jax-learn-modern/static/js,./xlearn/feature_extraction/_stop_words.py,./doc/_build,./doc/auto_examples,./doc/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt
